Update ArrayTest.java